add some feature   and change project to layer base
