# docs/swagger.yaml
@@ -1,35 +1,17 @@
 basePath: /
 definitions:
-  models.Order:
+  product.Product:
     properties:
-      id:
-        type: integer
-      product_ids:
-        items:
-          type: integer
-        type: array
-      total_price:
-        type: number
-    type: object
-  models.Product:
-    properties:
+      description:
+        type: string
       id:
         type: integer
       name:
         type: string
       price:
         type: number
-    type: object
-  models.User:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      id:
+      stock:
         type: integer
-      name:
-        type: string
     type: object
 host: localhost:8080
 info:
@@ -38,39 +20,34 @@ info:
   title: Ecommerce API
   version: "1.0"
 paths:
-  /orders:
-    post:
-      consumes:
-      - application/json
-      description: ایجاد یک سفارش جدید با لیست محصولات و مبلغ کل سفارش.
+  /products/{id}:
+    get:
+      description: این متد یک محصول را با استفاده از ID برمی‌گرداند
       parameters:
-      - description: Order Data
-        in: body
-        name: order
+      - description: شناسه محصول
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/models.Order'
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Order'
-        "400":
-          description: Bad Request
+            $ref: '#/definitions/product.Product'
+        "404":
+          description: Not Found
           schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: ثبت سفارش جدید
+            additionalProperties:
+              type: string
+            type: object
+      summary: دریافت محصول با شناسه
       tags:
-      - orders
-  /products:
+      - محصولات
+  /products/all:
     get:
-      description: لیست تمامی محصولات موجود در فروشگاه را برمی‌گرداند.
+      description: این متد همه محصولات را برمی‌گرداند
       produces:
       - application/json
       responses:
@@ -78,72 +55,58 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Product'
+              $ref: '#/definitions/product.Product'
             type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: دریافت لیست محصولات
+      summary: دریافت همه محصولات
       tags:
-      - products
+      - محصولات
+  /products/create:
     post:
       consumes:
       - application/json
-      description: ایجاد و ثبت یک محصول جدید در فروشگاه.
+      description: این متد یک محصول جدید ایجاد می‌کند
       parameters:
-      - description: Product Data
+      - description: اطلاعات محصول
         in: body
         name: product
         required: true
         schema:
-          $ref: '#/definitions/models.Product'
+          $ref: '#/definitions/product.Product'
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
-            $ref: '#/definitions/models.Product'
+            $ref: '#/definitions/product.Product'
         "400":
           description: Bad Request
           schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: افزودن محصول جدید
+            additionalProperties:
+              type: string
+            type: object
+      summary: ایجاد محصول جدید
       tags:
-      - products
-  /users:
-    post:
-      consumes:
-      - application/json
-      description: ثبت اطلاعات یک کاربر جدید در سیستم.
+      - محصولات
+  /products/delete/{id}:
+    delete:
+      description: این متد یک محصول را حذف می‌کند
       parameters:
-      - description: User Data
-        in: body
-        name: user
+      - description: شناسه محصول
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      produces:
-      - application/json
+        type: integer
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
+        "204":
+          description: حذف موفقیت‌آمیز
         "500":
           description: Internal Server Error
           schema:
-            type: string
-      summary: ایجاد کاربر جدید
+            additionalProperties:
+              type: string
+            type: object
+      summary: حذف محصول
       tags:
-      - users
+      - محصولات
 swagger: "2.0"
